--- a/css/biz2/common.css
+++ b/css/biz2/common.css
@@ -43,8 +43,6 @@
 .txt-gray66 {color: #666666;}
 .txt-grayb5 {color: #b5b5b5;}
 
-
-
 /* margin - top */
 .mt-40 {margin-top: 40px;}
 .mt-80 {margin-top: 80px;}
@@ -60,6 +58,7 @@
 
 /* width style */
 .w-100 {width: 100%;}
+.mw-140 {max-width: 140px;}
 
 /* height */
 .mh-set {min-height: var(--mh, auto);}
@@ -74,6 +73,9 @@
 .flex {display: flex;}
 .flex-ac { display: flex; align-items: center;}
 .flex-acjs {display: flex; align-items: center; justify-content: space-between;}
+
+.hidden {display: none;}
+
 
 /* display */
 .flex-col {display: flex; flex-direction: column;}
@@ -94,5 +96,7 @@ table {font-size: 20px;}
 
 /* responsive w-set */
 .res-wSet {width: var(--width, auto);}
+
+
 
 
