--- a/css/biz2/reset.css
+++ b/css/biz2/reset.css
@@ -88,6 +88,7 @@ input[type="search"], input[type="email"], textarea {
 	background: #fff;
 	border: 1px solid var(--gray-30-d8);
 	padding: 0 16px;
+
 	font-size: inherit;
 }
 
@@ -202,7 +203,7 @@ html {
 	font-weight: 300;
 	font-size: 16px;
 	line-height: 1.5;
-	color: var(--black-90-1d);
+	color: var(--text-primary-00);
 }
 
 html input {
@@ -212,3 +213,18 @@ html input {
 html a, html button {
 	font-weight: 300;
 }
+
+/* Scrollbar Design */
+
+::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar-button:start {size: 0;}
+::-webkit-scrollbar-button:end {size: 0;}
+::-webkit-scrollbar-track-piece {
+	background-color: white; /*스크롤 바 배경 색상*/
+}
+::-webkit-scrollbar-thumb {
+	border-radius: 20px;
+	background-color: #D9D9D9; /*스크롤 바 색상*/
+}
+
+
