--- a/css/biz2/style.css
+++ b/css/biz2/style.css
@@ -16,8 +16,10 @@ input{width:100%;font-size:18px}
 select{color:#8e8e8e;font-size:18px;font-weight:500}
 
 /* text 공통 */
+.txt-muted{font-size:14px;font-weight:500;color:#666}
 .txt-ss{font-size:16px;font-weight:500;color:#8e8e8e}
 .txt-s{font-size:18px;font-weight:500;color:#8e8e8e}
+.txt{font-size:20px;font-weight:500;color:#333}
 
 /* color 공통 */
 .color-red{color:#F54141}
@@ -26,7 +28,7 @@ select{color:#8e8e8e;font-size:18px;font-weight:500}
 .bg-gray{background-color:#586377 !important}
 
 /* icon 공통 */
-.ico::before,
+.ico::before, 
 .ico::after{content:"";display:inline-block;vertical-align:middle}
 
 /* button 공통 */
@@ -60,6 +62,8 @@ input[type="radio"]:checked::after{display:block;box-sizing:initial}
 
 /* table 공통 */
 table{word-break:break-all}
+table th {color: var(--text-primary-00); font-weight: 700;}
+table td {color: var(--text-sub-33);}
 .com-write-table table th,
 .com-write-table table td{height:76px}
 .com-write-table table td{padding:10px 20px}
@@ -73,6 +77,7 @@ table{word-break:break-all}
 .border-box{padding:8px 16px;border:1px solid #ddd;border-radius:10px}
 .txt-box{display:flex;flex-direction:column;justify-content:space-between;min-height:380px;font-size:18px}
 .txt-box .txt-byte{text-align:right;color:#A0ACB8;font-size:13px}
+.blue-box{padding:40px 38px;border-radius:40px;background-color:#F7F9FC}
 
 /* paging 공통 */
 .com-paging button.prev,
@@ -164,7 +169,7 @@ table{word-break:break-all}
 
 /* IIP_400 기관 정보 수정 */
 .com-write-table td .btn-search{position:relative;top:-4px;width:20px;height:20px;margin:6px;background-size:100%}
-.mail-agree .ico::before {background:url(../../images/biz2/icon_checkbox.svg) no-repeat center; width: 22px; height: 22px;}
+.mail-agree .ico::before {background:url(../../images/biz2/icon_checkbox.svg) no-repeat center;width:22px;height:22px}
 
 /* IIP_401 기관 정보 수정 상세 */
 .division .flex-ac{gap:30px}
@@ -195,7 +200,7 @@ table{word-break:break-all}
 
 /* IIP_600 사용기관 문의사항 */
 .txt-list{font-size:20px}
-.txt-list li::before{width:8px;height:8px;margin:-4px 16px 0 0;border-radius:50%;background-color:#000}
+.txt-list li::before{content:"";display:inline-block;width:8px;height:8px;margin:-4px 16px 0 0;border-radius:50%;background-color:#000;vertical-align:middle}
 .table-edu td .btns{width:136px}
 .quiz-area dt{height:89px;margin-top:80px;padding:17px;border:2px solid #00adb2;border-radius:20px 20px 0 0;background-color:#bcecef;font-size:38px;color:#1c8a90;text-align:center}
 .quiz-area dd{font-size:20px;border:1px solid #d8d8d8;border-top:0}
@@ -206,49 +211,95 @@ table{word-break:break-all}
 .quiz-area dd .flex-ac{padding:20px 40px;gap:20px}
 .quiz-area dd .flex-ac .btns{width:100px;height:110px;padding:0;font-size:20px;font-weight:500}
 .quiz-area dd .flex-ac .btns::before{content:"";display:block;width:60px;height:60px;margin:0 auto;background:url(../../images/biz2/ico/ico_o.svg) no-repeat 0 0}
-.quiz-area dd .flex-ac .btns.no-sign::before {background: url(../../images/biz2/ico/ico_x.svg) no-repeat 0 0;}
+.quiz-area dd .flex-ac .btns.no-sign::before {background:url(../../images/biz2/ico/ico_x.svg) no-repeat 0 0}
 
 /* LNP_201 자주하는질문 상세 */
-.qna .top-info-group {align-items: end;} 
-.qna .top-info-group > span {color: #666666; font-size: 20px;}
-.qna .top-info-group h3.ico::before {background: url(../../images/biz2/ico/ico_question.svg) no-repeat center; width: 60px; height: 60px; margin-right: 16px;}
-.qna .qna-answer {font-size: 38px; margin-bottom: 30px;}
-.qna .qna-answer.ico::before {background: url(../../images/biz2/ico/ico_answer.svg) no-repeat center; background-size: cover; width: 46px; height: 46px; margin-right: 16px;}
-.qna-attached {display: block; font-weight: 700;}
-.qna-answer-details {padding-top: 30px; padding-bottom: 30px; color: #666666; border-bottom: 1px solid var(--gray-30-d8); font-size: 18px;}
-.qna-table thead th {text-align: left; padding-left: 40px;}
-.qna-table tbody td {padding: 40px 40px 0 40px}
-.qna-table tbody tr:last-of-type td {padding-bottom: 40px; padding-top: 30px;}
-.qna-table tbody tr:not(:last-of-type) td {border-bottom: 0;}
-.qna .add-file {height: 76px;}
-.qna .add-file .attached-file img {padding-left: 24px;}
+.qna .top-info-group {align-items:end} 
+.qna .top-info-group > span {color:#666666;font-size:20px}
+.qna .top-info-group h3.ico::before {background:url(../../images/biz2/ico/ico_question.svg) no-repeat center;width:60px;height:60px;margin-right:16px}
+.qna .qna-answer {font-size:38px;margin-bottom:30px}
+.qna .qna-answer.ico::before {background:url(../../images/biz2/ico/ico_answer.svg) no-repeat center;background-size:cover;width:46px;height:46px;margin-right:16px}
+.qna-attached {display:block;font-weight:700}
+.qna-answer-details {padding-top:30px;padding-bottom:30px;color:#666666;border-bottom:1px solid var(--gray-30-d8);font-size:18px}
+.qna-table thead th {text-align:left;padding-left:40px}
+.qna-table tbody td {padding:40px 40px 0 40px}
+.qna-table tbody tr:last-of-type td {padding-bottom:40px;padding-top:30px}
+.qna-table tbody tr:not(:last-of-type) td {border-bottom:0}
+.qna .add-file {height:76px}
+.qna .add-file .attached-file img {padding-left:24px}
 
-/* LCP_001 본인인증 */
+/* LCP_001 본인인증 약관동의 */
 .agree-box {padding: 60px 40px; border: 1px solid var(--gray-30-d8); border-radius: 20px; }
 .agree-box .agree {display: flex; flex-direction: column; gap: 28px;}
 .agree-box .agree:not(:last-of-type) {padding-bottom: 28px;}
 .agree-box .agree + .agree {padding-top: 46px; border-top: 1px solid #e8e8e8;}
 .agree-box .agree-radio {padding: 26px 20px; background: var(--gray-05-f8); border-radius: 16px; display: flex; justify-content: space-between;}
 .agree-box .agree-radio > span {color: #797979; font-size: 18px;}
-.agree-box .radio-box label { flex: auto;}
-.agree-box .radio-box label:not(:last-of-type) {margin-right: 16px;}
+.agree-box .radio-box label { flex: auto; color: var(--black-90-1d);}
+.agree-box .radio-box label:not(:last-of-type) {margin-right: 16px; }
 .agree-box .agree-tit {font-size: 22px;}
 .agree-box .agree-btn {border: 1px solid var(--gray-30-d8); color: #666666; border-radius: 8px; max-width: 84px; height: 44px;}
+/* LCP_002 본인인증 */
+.auth-area-in {gap: 30px;}
+.auth-area-in button {font-weight: 700; font-size: 24px; flex: 1; height: 250px; border: 1px solid green; border-radius: 20px; background: var(--gray-05-f8); border: 1px solid var(--gray-30-d8); display: flex; flex-direction: column; justify-content: center; align-items: center;}
+.auth-area-in button::before {height: 110px; margin-bottom: 30px;}
+.auth-area-in button:not(.simple)::before {width: 110px; }
+.auth-area-in button.simple::before {width: 184px; background: url(../../images/biz2/ic_simple.svg) no-repeat center;}
+.auth-area-in button.joint::before {background: url(../../images/biz2/ic_joint.svg) no-repeat center;}
+.auth-area-in button.mo-auth::before {background: url(../../images/biz2/ic_moauth.svg) no-repeat center;}
+.auth-area-in button.i-pin::before {background: url(../../images/biz2/ic_ipin.svg) no-repeat center;}
+/* button is-active 스타일 */
+.auth-area-in button.is-active {background: var(--primary-color-600); color: #fff;}
+.auth-area-in button.is-active.joint::before {background: url(../../images/biz2/ic_joint_white.svg) no-repeat center;}
+.auth-area-in button.is-active.mo-auth::before {background: url(../../images/biz2/ic_moauth_white.svg) no-repeat center;}
+.auth-area-in button.is-active.i-pin::before {background: url(../../images/biz2/ic_moauth_white.svg) no-repeat center;}
+/* LCP_003 본인인증 확인 */
+.result-chk > p {font-size: 24px; font-weight: 500; padding-top: 40px; padding-bottom: 40px;}
+.result-chk .ico::before {background: url(../../images/biz2/icon_check.svg) no-repeat center; width: 100px; height: 100px;}
+
 /* IGP_001 평생교육이용권이란? */
-.edu-area{gap:48px}
-.edu-area img{width: 440px;}
-.edu-area .edu-desc{display: table;table-layout: fixed;}
-.edu-area .edu-desc dl{display: table-cell;text-align: center;font-size: 20px;font-weight: 500;word-break: keep-all;}
-.edu-area .edu-desc dl+dl{padding-left: 4px;}
-.edu-area .edu-desc .list01{width: 16%;}
-.edu-area .edu-desc .list02{width: 15%;}
-.edu-area .edu-desc .list03{width: 17%;}
-.edu-area .edu-desc .list04{width: auto;}
-.edu-area .edu-desc .list05{width: 19%;}
-.edu-area .edu-desc dl dt,
-.edu-area .edu-desc dl dd{padding:11px 16px;border-radius: 12px;}
-.edu-area .edu-desc dl dt{background-color: #E2E7F0; }
-.edu-area .edu-desc dl dd{height:122px;background-color: #F7F9FC;color:#333}
+.ticket{gap:48px}
+.ticket img{width:calc(100% - 792px)}
+.ticket .ticket-desc{display:flex}
+.ticket .ticket-desc dl{display:table;table-layout:fixed;text-align:center;font-size:20px;font-weight:500;word-break:keep-all}
+.ticket .ticket-desc dl+dl{padding-left:4px}
+.ticket .ticket-desc .list01{width:117px}
+.ticket .ticket-desc .list02{width:110px}
+.ticket .ticket-desc .list03{width:110px}
+.ticket .ticket-desc .list04{flex:1}
+.ticket .ticket-desc .list05{width:147px}
+.ticket .ticket-desc dl dt,
+.ticket .ticket-desc dl dd{display:flex;align-items:center;justify-content:center;border-radius:12px}
+.ticket .ticket-desc dl dt{padding:11px;background-color:#E2E7F0}
+.ticket .ticket-desc dl dd{min-height:122px;margin-top:4px;padding:16px 16.5px;background-color:#F7F9FC;color:#333}
+
+/* IGP_002 평생교육이용권 사용하기 */
+.use-ticket .blue-box.bg{position:relative;min-height:400px}
+.use-ticket .blue-box.bg::after{content:"";position:absolute;right:0;bottom:0;width:83%;height:100%;background:url(../../images/biz2/bg/bg_edu.png) no-repeat right bottom;background-size:66%}
+.use-ticket .bg-box .top-info-group{margin-top:0}
+.use-ticket .bg-box .txt{position:relative;z-index:1}
+.use-ticket .ordered-list li+li{margin-top:16px}
+.use-ticket li,
+.use-ticket .use-edu.ordered-list li .txt{padding-left:20px;font-size:20px;text-indent:-20px}
+.use-ticket .txt-muted{margin-top:4px;padding-left:21px;text-indent:-17px}
+.use-ticket .txt-list li::before{width:5px;height:5px}
+.use-ticket ul,
+.use-ticket ol{padding-left:15px}
+.use-ticket .blue-box{padding:60px 108px;border-radius:20px}
+.use-ticket .blue-box .order{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center}
+.use-ticket .blue-box .order+.order{margin-top:40px;flex-direction:row-reverse}
+.use-ticket .blue-box .order li{display:flex;flex-direction:column;align-items:center;position:relative}
+.use-ticket .blue-box .order li img{max-width:160px}
+.use-ticket .border-box{padding:40px;border:1px solid #D8D8D8;border-radius:10px;background:#F7F9FC}
+.use-ticket .border-box p{font-size:20px}
+.use-ticket .use-edu li{display:flex;gap:40px;padding-left:0;text-indent:0}
+.use-ticket .use-edu li+li{margin-top:20px}
+.use-ticket .voucher li{padding-left:0;text-indent:0}
+.use-ticket .use-edu.ordered-list li .txt-muted{margin-left:20px}
+.use-ticket .border-box+.border-box{margin-top:16px}
+.use-ticket .border-box strong{display:block;margin-bottom:12px;font-size:22px;font-weight:700}
+.use-ticket .border-box .ordered-list{margin-top:4px;padding-left:0}
+.use-ticket .border-box .ordered-list li+li{margin-top:4px}
 
 
 /* full page layout (로그인 및 메인 사용)*/
@@ -266,20 +317,20 @@ table{word-break:break-all}
 
 /* layer style */
 /* layer top search-box */
-.layer-pop .search-box{margin:0;padding:20px;display:flex;gap:20px;align-items:center; flex-wrap: wrap;} 
+.layer-pop .search-box{margin:0;padding:20px;display:flex;gap:20px;align-items:center;flex-wrap:wrap} 
 .layer-pop .search-box :where(input[type="text"], .btns){height:48px}
 .layer-pop .search-box > label{font-weight:500;font-size:18px} 
 .layer-pop .search-box input{flex:1;border-radius:10px}
 /* layer btn */
-.layer-pop .btns {padding: 0 20px; width: auto; background: var(--primary-color-600);} /* 기본 버튼 고정값 초기화 */
-.layer-btn-wrap {text-align: center; margin-top: 80px;}
-.layer-pop .search-box .btns {margin: 0;} /* 기본 설정 마진 초기화 */
+.layer-pop .btns {padding:0 20px;width:auto;background:var(--primary-color-600)} /* 기본 버튼 고정값 초기화 */
+.layer-btn-wrap {text-align:center;margin-top:80px}
+.layer-pop .search-box .btns {margin:0} /* 기본 설정 마진 초기화 */
 /* layer 테이블 공통  */
-.layer-pop table {margin-top: 40px;}
-.layer-pop .com-view-table :where(th,td) {height: 44px; font-size: 16px; font-weight: 300;}
-.layer-pop .com-write-table :where(th,td) {height: 44px; font-size: 16px; font-weight: 300;}
-.layer-pop .com-view-table th {padding: 10px 17px;}
-.layer-pop .com-write-table th {padding: 0;}
+.layer-pop table {margin-top:40px}
+.layer-pop .com-view-table :where(th,td) {height:44px;font-size:16px;}
+.layer-pop .com-write-table :where(th,td) {height:44px;font-size:16px;}
+.layer-pop .com-view-table th {padding:10px 17px}
+.layer-pop .com-write-table th {padding:0}
 /* layer-txt group */
 .layer-pop .layer-text-box {padding: 20px; border: 1px solid var(--gray-30-d8); background: var(--gray-05-f8); border-radius: 12px; font-weight: 300;}
 .layer-text-box > ul {display: flex; flex-direction: column; gap: 10px;}
@@ -288,9 +339,18 @@ table{word-break:break-all}
 .layer-pop .info-area .table-box > .com-write-table {margin-bottom: 40px;}
 .layer-pop .search-box.list label {width: 80px;}
 .layer-pop .search-box.list .flex-ac {gap: 20px; width: 100%;}
+/* layer 내부 동의 박스 */
+.layer-pop .agree-box {padding: 20px; max-height: 400px; overflow: auto}
+.layer-pop .agree-box h3 {font-size: 20px; margin-bottom: 10px;}
+.layer-pop .agree-box h4 {font-size: 16px; color: #333333; font-weight: 300; margin-bottom: 10px;}
+.layer-pop .agree-box ol > li {font-size: 14px; color: #666666; font-weight: 300; padding-left:10px} 
+.layer-pop .agree-box .agree-detail + .agree-detail {padding-top: 30px;}
+.layer-pop .top-info-group {margin-top: 40px;}
+.layer-pop .top-info-group h3 {font-size: 20px;}
+.layer-pop .bottom-info-group {margin-top: 4px; color: #333333; font-size: 13px;}
 
 /* 탭 공통 (임시) */
-.tab-list {display: flex; align-items: center; gap: 4px; font-size: 24px; margin-bottom: 60px; border-bottom: 1px solid var(--gray-30-d8);}
-.tab-list > li {width: var(--wSet ,25%); text-align: center;}
-.tab-list > li > a {display: block;	height: 100%; line-height: 76px; border-radius: 20px 20px 0 0; border: 1px solid var(--gray-30-d8); border-bottom: none; background: var(--gray-05-f8);}
-.tab-list > li > a.show {background: var(--primary-color-600); color: #fff; border: none;} 
+.tab-list {display:flex;align-items:center;gap:4px;font-size:24px;margin-bottom:60px;border-bottom:1px solid var(--gray-30-d8)}
+.tab-list > li {width:var(--wSet ,25%);text-align:center}
+.tab-list > li > a {display:block;	height:100%;line-height:76px;border-radius:20px 20px 0 0;border:1px solid var(--gray-30-d8);border-bottom:none;background:var(--gray-05-f8)}
+.tab-list > li > a.show {background:var(--primary-color-600);color:#fff;border:none} 
