--- a/css/biz2/main.css
+++ b/css/biz2/main.css
@@ -231,7 +231,7 @@
 
 /* pagination styling */
 .com-paging { display: flex; justify-content: center; align-items: center; column-gap: 10px; margin-top: 40px; }
-.com-paging button { width: 34px; height: 34px; font-size: 18px; font-weight: 500; color: #333333; }
+.com-paging button { width: 34px; height: 34px; font-size: 18px; font-weight: 500; color: #333333; vertical-align: middle;}
 .com-paging button.on { background: #00b3be; border-radius: 6px; color: #fff; }
 .com-paging button.prev { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: #333; padding-left: 20px; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_left.png) no-repeat 0 9px; }
 .com-paging button.next { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: #333; padding: 0 20px 0 0; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_right.png) no-repeat right 9px; }
