(20241206) 이민혁 제이쿼리 변경 및 1206 공유

--- a/css/biz2/common.css
+++ b/css/biz2/common.css
@@ -81,6 +81,7 @@
 .flex {display: flex;}
 .flex-ac { display: flex; align-items: center;}
 .flex-acjs {display: flex; align-items: center; justify-content: space-between;}
+.il-flex-ac {display: inline-flex; align-items: center;}
 
 .hidden {display: none;}
 
