--- a/css/biz2/main.css
+++ b/css/biz2/main.css
@@ -87,6 +87,7 @@
 .layer-pop .layer-content { overflow: hidden; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); max-width: var(--max-width, 100%); width: 100%;}
 .layer-pop .layer-content .layer-scroll { overflow-y: auto; position: relative; max-height: calc(100vh - 40px); padding: 60px; background: #FFF; border-radius: 20px;}
 .layer-pop .layer-content .layer-scroll > .title { display: block; position: relative; font-size: 24px; text-align: center; font-weight: 700;}
+.layer-pop .layer-content .layer-scroll .desc {color: var(--text-sub-33);}
 .layer-pop .layer-content .layer-scroll > .title .ic-edu { position: absolute; left: 0; top: 0; width: 176px; height: 34px; background: url(../../images/biz2/ic_pop_edu.png) no-repeat 0 0; }
 .layer-pop .layer-content .layer-scroll .close-btn { position: absolute; right: 38px; top: 15px; width: 32px; height: 32px; background: url(../../images/biz2/ic_pop_close.png) no-repeat center center; }
 .layer-pop .layer-content .layer-scroll .send-input-area { margin-top: 32px; }
@@ -233,8 +234,8 @@
 .com-paging { display: flex; justify-content: center; align-items: center; column-gap: 10px; margin-top: 40px; }
 .com-paging button { width: 34px; height: 34px; font-size: 18px; font-weight: 500; color: #333333; vertical-align: middle;}
 .com-paging button.on { background: #00b3be; border-radius: 6px; color: #fff; }
-.com-paging button.prev { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: #333; padding-left: 20px; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_left.png) no-repeat 0 9px; }
-.com-paging button.next { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: #333; padding: 0 20px 0 0; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_right.png) no-repeat right 9px; }
+.com-paging button.prev { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: var(--text-third-66); padding-left: 20px; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_left.png) no-repeat 0 9px; }
+.com-paging button.next { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: var(--text-third-66); padding: 0 20px 0 0; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_right.png) no-repeat right 9px; }
 .com-paging .empty { width: 34px; height: 34px; font-size: 18px; font-weight: 500; color: #333333; text-align: center; }
 
 /* main page styling */
