--- a/css/biz2/mo.css
+++ b/css/biz2/mo.css
@@ -8,5 +8,17 @@
 	속성순서    : 레이아웃 > 크기/간격 > 박스모양 > 폰트/정렬 > 기타
 *****************************************************/
 
-@media only screen and (max-width:768px){}
-@media only screen and (max-width: 360px){}
+/* pc content 1024~1920 */
+@media only screen and (min-width:1024px){
+	.lg-only {display: block;}
+}
+/* Mobile Android */
+@media only screen and (max-width:800px){
+	/* pc content hide */
+	.lg-only {display: none;}
+
+	/* layer popup padding */
+	.layer-pop .layer-content {padding: 0 20px;}
+}
+
+
